iterate array elements using forEach

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<div id="app"></div>
+<div id="app">
+  <h1>JS ARRAY METHODS</h1>
+  <ul>
+    <li>
+      <h3>1. ADD/REMOVE items</h3>
+      <ul>
+        <li>arr.pop()</li>
+        <li>arr.push(...items)</li>
+        <li>arr.shift()</li>
+        <li>arr.unshift(...items);</li>
+      </ul>
+    </li>
+    <li>
+      <h3>2. Delete an element from the array</h3>
+      <ul>
+        <li>using 'delete' key</li>
+        <li>array.splice() METHODS</li>
+        <li>array.slice() METHOD</li>
+      </ul>
+    </li>
+    <li><h3>ARRAY.CONCAT() METHODS</h3></li>
+    <li><h3>ITERATE: forEach </h3></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
+</div>
