indexOf, lastIndexOf, includes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
       </ul>
     </li>
     <li><h3>ARRAY.CONCAT() METHODS</h3></li>
-    <li><h3>ITERATE: forEach </h3></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><h3>ITERATE: forEach</h3></li>
+    <li>
+      <h3>Searching in array</h3>
+      <ul>
+        <li>indexOf/lastIndexOf and includes</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </li>
   </ul>
 </div>
