arr.find(fn) and arr.findIndex(fn)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h3>Searching in array</h3>
       <ul>
         <li>indexOf/lastIndexOf and includes</li>
-        <li></li>
+        <li>find and findIndex</li>
         <li></li>
         <li></li>
         <li></li>
