--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
         <li></li>
       </ul>
     </li>
+    <li>
+      <h3>Transform an array</h3>
+      <ul>
+        <li>arr.map()</li>
+        <li>sort(fn)</li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </li>
   </ul>
 </div>
