sort, sort numbers, sort strings using localeComapre

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li>indexOf/lastIndexOf and includes</li>
         <li>find and findIndex</li>
-        <li></li>
+        <li>arr.filter()</li>
         <li></li>
         <li></li>
       </ul>
@@ -37,7 +37,7 @@
         <li>sort(fn)</li>
         <li></li>
         <li></li>
-        <li></li>
+        <li>// write the function isAnagram</li>
       </ul>
     </li>
   </ul>
