arr.split() and arr.join()

--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
       <ul>
         <li>arr.map()</li>
         <li>sort(fn)</li>
-        <li></li>
-        <li></li>
-        <li>// write the function isAnagram</li>
+        <li>arr.reverse()</li>
+        <li>arr.split()</li>
+        <li>arr.join()</li>
       </ul>
     </li>
+    <li>write the function isAnagram</li>
   </ul>
 </div>
