arr.reduce method

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <li>arr.reverse()</li>
         <li>arr.split()</li>
         <li>arr.join()</li>
+        <li>arr.reduce(fn)/ arr.reduceRight(fn)</li>
       </ul>
     </li>
-    <li>write the function isAnagram</li>
+    <li><h3>Write the Anagram function</h3></li>
   </ul>
 </div>
