use of thisArg with array methods.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
         <li>arr.reduce(fn)/ arr.reduceRight(fn)</li>
       </ul>
     </li>
+    <li><h3>Array.isArray()</h3></li>
+    <li>
+      <h3>Most methods support “thisArg”</h3>
+    </li>
     <li><h3>Write the Anagram function</h3></li>
   </ul>
+  <h4>
+    Source:
+    <a href="https://javascript.info: array-methods"
+      >javascript.info/array-methods</a
+    >
+  </h4>
 </div>
