arr.at() method

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <li>
       <h3>Most methods support “thisArg”</h3>
     </li>
+    <li><h3>arr.at(index)</h3></li>
     <li><h3>Write the Anagram function</h3></li>
   </ul>
   <h4>
