task 1 translate into camelCase

--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
         <li>indexOf/lastIndexOf and includes</li>
         <li>find and findIndex</li>
         <li>arr.filter()</li>
-        <li></li>
-        <li></li>
       </ul>
     </li>
     <li>
@@ -46,7 +44,10 @@
       <h3>Most methods support “thisArg”</h3>
     </li>
     <li><h3>arr.at(index)</h3></li>
-    <li><h3>Write the Anagram function</h3></li>
+    <li><h3>Anagram function [codewars.com]</h3></li>
+    <li>
+      <h3>DNA PAIRING [codewars.com]</h3>
+    </li>
   </ul>
   <h4>
     Source:
