filter range in place

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       <h3>Most methods support “thisArg”</h3>
     </li>
     <li><h3>arr.at(index)</h3></li>
+    <li>
+      <h3>Translate into camelCase</h3>
+    </li>
     <li><h3>Anagram function [codewars.com]</h3></li>
     <li>
       <h3>DNA PAIRING [codewars.com]</h3>
