--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
     <li>
       <h3>Translate into camelCase</h3>
     </li>
+    <li>
+      <h3>Filter range</h3>
+    </li>
+    <li>
+      <h3>Filter range "in place"</h3>
+    </li>
+    <li>
+      <h3>Sort in decreasing order</h3>
+    </li>
+    <li>
+      <h3>Copy and sort array</h3>
+    </li>
+    <li>
+      <h3>Create an extendable calculator</h3>
+    </li>
     <li><h3>Anagram function [codewars.com]</h3></li>
     <li>
       <h3>DNA PAIRING [codewars.com]</h3>
